--- a/pgp-wordlist.cabal
+++ b/pgp-wordlist.cabal
@@ -21,6 +21,8 @@ cabal-version:       >=1.10
 
 library
     exposed-modules:     Data.Text.PgpWordlist
+                       , Data.Text.PgpWordlist.Internal.AltList
+                       , Data.Text.PgpWordlist.Internal.Tables
     build-depends:       base >=4.8 && <4.9
                        , bytestring >=0.10 && <0.11
                        , bimap >=0.3 && <0.4
@@ -37,7 +39,8 @@ test-suite tasty
     default-language: Haskell2010
     build-depends: pgp-wordlist
                  , base
-                 , smallcheck >= 1.1
+                 , text
+                 , HUnit
                  , tasty >= 0.10
-                 , tasty-quickcheck >= 0.8
-                 , tasty-smallcheck >= 0.8
+                 , tasty-hunit >= 0.9
+                 , bytestring
