--- a/pgp-wordlist.cabal
+++ b/pgp-wordlist.cabal
@@ -24,8 +24,8 @@ library
                        , Data.Text.PgpWordlist.Internal.AltList
                        , Data.Text.PgpWordlist.Internal.Tables
     build-depends:       base >=4.8 && <4.9
-                       , bytestring >=0.10 && <0.11
                        , bimap >=0.3 && <0.4
+                       , bytestring >=0.10 && <0.11
                        , text >=1.2 && <1.3
     hs-source-dirs:      src
     ghc-options:         -Wall
@@ -39,8 +39,9 @@ test-suite tasty
     default-language: Haskell2010
     build-depends: pgp-wordlist
                  , base
-                 , text
+                 , bytestring
                  , HUnit
                  , tasty >= 0.10
                  , tasty-hunit >= 0.9
-                 , bytestring
+                 , tasty-quickcheck
+                 , text
