--- a/pgp-wordlist.cabal
+++ b/pgp-wordlist.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                pgp-wordlist
-version:             0.1
+version:             0.1.0.1
 synopsis:            Translate between binary data and a human-readable
                      collection of words.
 description:         Translate between binary data and a human-readable
@@ -46,11 +46,13 @@ library
                        , Data.Text.PgpWordlist.Internal.AltList
                        , Data.Text.PgpWordlist.Internal.Convert
                        , Data.Text.PgpWordlist.Internal.Types
+                       , Data.Text.PgpWordlist.Internal.Word8Bimap
                        , Data.Text.PgpWordlist.Internal.Words
     build-depends:       base >=4.6 && < 5
-                       , bimap >=0.3 && <0.4
-                       , bytestring >=0.10 && <0.11
-                       , text >=1.2 && <1.3
+                       , bytestring >= 0.10
+                       , containers
+                       , text >=1.2
+                       , vector >= 0.5
     hs-source-dirs:      src
     ghc-options:         -Wall
     default-language:    Haskell2010
