Add GHC HEAD to CI (as allowed failure)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
  - CABALVER=1.18 GHCVER=7.6.3
  - CABALVER=1.18 GHCVER=7.8.4
  - CABALVER=1.22 GHCVER=7.10.1
+ - CABALVER=1.22 GHCVER=head
 
 # Note: the distinction between `before_install` and `install` is not
 #       important.
@@ -48,4 +49,7 @@ script:
  - SRC_TGZ=$(cabal info . | awk '{print $2;exit}').tar.gz &&
    (cd dist && cabal install --force-reinstalls "$SRC_TGZ")
 
-# EOF
+matrix:
+  fast_finish: true
+  allow_failures:
+    - env: GHCVER=head CABALVER=1.22 # see section about GHC HEAD snapshots
