--- a/pgp-wordlist.cabal
+++ b/pgp-wordlist.cabal
@@ -67,6 +67,7 @@ test-suite tasty
     build-depends:    pgp-wordlist
                     , base
                     , bytestring
+                    , deepseq
                     , HUnit
                     , tasty >= 0.10
                     , tasty-hunit >= 0.9
